                          ____         __ _           
                         / ___|  __ _ / _(_)_ __ __ _ 
                         \___ \ / _` | |_| | '__/ _` |
                          ___) | (_| |  _| | | | (_| |
                         |____/ \__,_|_| |_|_|  \__,_|
                     http://service-technology.org/safira


Version 2.0
===========

* implemented intersection

* implemented union

* fixed bug in CNF calculation

Version 1.0
===========

* initial release

* added scripts to use LCOV (`http://ltp.sourceforge.net/coverage/lcov.php')
  to determine test case coverage (use `make cover' in `tests' directory)


