@@ -23,7 +23,7 @@ OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWA
 #include <errno.h>
 
 #include <signal.h>
-#include <zlib.h>
+//#include <zlib.h>
 
 #include <vector>
 using std::vector;
@@ -91,6 +91,7 @@ static inline uint64_t memUsed() { return 0; }
 
 #define CHUNK_LIMIT 1048576
 
+/*
 class StreamBuffer {
     gzFile  in;
     char    buf[CHUNK_LIMIT];
@@ -109,6 +110,7 @@ public:
     int  operator *  () { return (pos >= size) ? EOF : buf[pos]; }
     void operator ++ () { pos++; assureLookahead(); }
 };
+*/
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
