@@ -25,7 +25,7 @@
 #include <map>
 #include <list>
 #include <ctime>
-#include <zlib.h>
+//#include <zlib.h>
 #include <sys/types.h>
 #include <sys/wait.h>
 #include "Formula.h"
