@@ -19,7 +19,7 @@
 
 #include <config.h>
 #include <ctime>
-#include <zlib.h>
+//#include <zlib.h>
 #include <sys/types.h>
 #include <sys/wait.h>
 #include <vector>
