@@ -15,6 +15,8 @@ Version 2.0
 
 * fixed bug in CNF calculation
 
+* removed zlib dependency
+
 Version 1.0
 ===========
 
